objects/tffa__ReferralProgramMatrix__c.object
<CustomObject>
    <description>Represents business rules for filtering referral programs available for participation. Criteria for filtering may be based on party&apos;s existing relationship with the Financial institution (FI). This can include product category, product information of financial accounts held by the party at the FI. Since referral programs are also applicable to agents, criteria for such programs may depend on the skill set of the agent.</description>
    <fields>
        <fullName>tffa__AccountTenureFrom__c</fullName>
        <description>The current tenure (in days) of the financial account. Sets the lower bound.</description>
        <label>Account tenure in days (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the matrix is active for consumption. Derived from disabled and referral program active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Program__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AgentSkillSet__c</fullName>
        <description>The skills of the agent. Supports multiple. A fact.</description>
        <label>Agent Skill (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SkillType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>The unique codes of brands servicing the referral program. A fact. Supports multiple values (semicolon separated begin).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Explains the rule, giving some context about why the rule conditions (facts) lead to the rule action (outcome).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the matrix is not available for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartySegmentSet__c</fullName>
        <description>The segment of the party. Supports multiple. A fact.</description>
        <label>Party segment (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartySegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>The product category of of the party&apos;s financial account. For cases where financial accounts are not available for pull, this can be product reference of a completed application.. Supports multiple. A fact.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCodeSet__c</fullName>
        <description>The product code of the party&apos;s financial account. For cases where financial accounts are not available for pull, this can be product reference of a completed application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Product code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The outcome of the rule, an allowed program.</description>
        <label>Program (outcome)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Program is inactive.</errorMessage>
            <filterItems>
                <field>tffa__ReferralProgram__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__ReferralProgram__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerType__c</fullName>
        <description>Type of referrer who can join the referral program. Derived from referral program (outcome).</description>
        <formula>TEXT(tffa__Program__r.tffa__ReferrerType__c)</formula>
        <inlineHelpText>Type of referrer who can join the referral program. Derived from referral program (outcome).</inlineHelpText>
        <label>Referrer type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records. Translates to relative order of roles available for selection. Also used for defaulting.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Referral Program Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__ReferrerType__c</columns>
        <columns>tffa__BrandCodeSet__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__ProductCodeSet__c</columns>
        <columns>tffa__AccountTenureFrom__c</columns>
        <columns>tffa__Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Program Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>